--- a/campaign_sheet.html
+++ b/campaign_sheet.html
@@ -12,18 +12,10 @@
   <body>
 <div class="row">
 <div class="large-2 columns">
-  <p>
-    <a href="#" class="button">Matt</a>
-  </p>
-  <p>
-    <a href="#" class="button">Ethan</a>
-  </p>
-  <p>
-    <a href="#" class="button">Alexandra</a>
-  </p>
-  <p>
-    <a href="#" class="button">Brian</a>
-  </p>
+    <p draggable="true">Matt</p>
+    <p draggable="true">Ethan</p>
+    <p draggable="true">Alexandra</p>
+    <p draggable="true">Brian</p>
 </div>
 <div class="large-10 columns">
   <ul class="accordion" data-accordion>
@@ -34,7 +26,7 @@
           <thead>
           <tr>
             <th>
-              x
+
             </th>
             <th>
               Winner
@@ -70,10 +62,16 @@
             <td>
 
             </td>
+            <td>
+
+            </td>
           </tr>
           <tr>
             <td>
               Brightgun Arena (no title)
+            </td>
+            <td>
+
             </td>
             <td>
 
@@ -104,10 +102,16 @@
             <td>
 
             </td>
+            <td>
+
+            </td>
           </tr>
           <tr>
             <td>
               The Rookery
+            </td>
+            <td>
+
             </td>
             <td>
 
@@ -138,10 +142,16 @@
             <td>
 
             </td>
+            <td>
+
+            </td>
           </tr>
           <tr>
             <td>
               The Orcs' Hive
+            </td>
+            <td>
+
             </td>
             <td>
 
@@ -163,18 +173,112 @@
   <li class="accordion-navigation">
     <a href="#innercircle">Inner Circle</a>
     <div id="innercircle" class="content">
-      <p>
-Alchemist's District
-      </p>
-      <p>
-        The University Plaza
-      </p>
-      <p>
-        Red Dawn Square
-      </p>
-      <p>
-        Evershadow District
-      </p>
+      <table>
+        <thead>
+        <tr>
+          <th>
+
+          </th>
+          <th>
+            Winner
+          </th>
+          <th>
+            Least Deaths
+          </th>
+          <th>
+            Most Coins
+          </th>
+          <th>
+            Won Rewards
+          </th>
+          <th>
+            Won Title
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            Alchemist's District
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+        </tr>
+        <tr>
+          <td>
+            The University Plaza
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Red Dawn Square
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Evershadow District
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+          <td>
+
+          </td>
+        </tr>
+      </tbody>
+    </table>
     </div>
   </li>
   <li class="accordion-navigation">
