--- a/deck.html
+++ b/deck.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/app.css" />
 	<link rel="stylesheet" href="css/jqx.base.css" />
-  
-<!-- hello world -->  
-  
-  
+
+<!-- hello world -->
+<!-- bye world :D -->
+
   </head>
   <body>
 <div class="top-bar">
@@ -30,7 +30,7 @@
     </ul>
   </div>
   <div class="top-bar-right">
-	
+
   </div>
 </div>
 
@@ -55,7 +55,7 @@
                   <p class="button">Health</p>
                   <p class="button">Attack</p>
                </ul>
-    
+
             </div>
             <div class="row">
             	<div class="large-12">
@@ -65,7 +65,7 @@
          </div>
       </div>
    </div>
-</div>	
+</div>
 			<div class="row">
 			<div class="large-6 columns">
 			<p><img src="img/AQ-Blank-Cards/Blank Card - Upgrade BACK Level 1.jpg"></p>
@@ -109,7 +109,7 @@
          </div>
       </div>
    </div>
-</div>	
+</div>
 				<div class="row">
 			<div class="large-6 columns">
 			<p><img src="img/AQ-Blank-Cards/Blank Card - Upgrade BACK Level 1.jpg"></p>
@@ -152,7 +152,7 @@
          </div>
       </div>
    </div>
-</div>	
+</div>
 				<div class="row">
 			<div class="large-6 columns">
 			<p><img src="img/AQ-Blank-Cards/Blank Card - Upgrade BACK Level 1.jpg"></p>
@@ -169,11 +169,11 @@
 			<p><img src="img/AQ-Blank-Cards/Blank Card - Upgrade BACK Level 1.jpg"></p>
 			</div>
 			</div>
-			</div>	
+			</div>
 
-					
+
 		</div>
-		
+
 
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
